# pay2play-arc

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
components/c1-api-meter/: README.md  package.json
components/c10-algo/: README.md  package.json
components/c2-agent-loop/: README.md  package.json
components/c3-llm-stream/: README.md  package.json
components/c4-dwell-reader/: package.json
components/c5-mcp-tool/: README.md  package.json
components/c7-row-meter/: README.md  (+1 more)
docs/: 01-hackathon-rules.md  02-arc-network.md  03-circle-nanopayments.md  04-x402-protocol.md  05-repos-to-clone.md  06-architecture.md  07-components.md  08-margin-analysis.md  09-competitive-intel.md  10-circle-feedback.md  11-tool-map.md  README.md  bridges.md  explanation.md  fees.md  technical.md  usage.md
python/: pyproject.toml
python/examples/: buyer.py  seller.py  vyper_demo.py
python/pay2play_arc/: __init__.py  contracts.py  gateway_client.py  middleware.py  x402.py
python/tests/: test_agent_escrow.py  test_p2p_contract_integration.py  test_payment_channel.py
scripts/: bench.ts  build-pdf.py  chain-id-check.ts  check-balances.ts  check-contract-drift.sh  create-job.ts  fund.ts  gateway-balance.ts  gateway-deposit.ts  generate-wallets.ts  ppmt-calculator.ts  register-agent.ts  test-agenticplace.ts  test-c6.ts  test-c7.ts  test-c9.ts
site/: index.html
tests/: bench-results-2026-04-24.md  integration-results-2026-04-24.md  results-2026-04-24.md  smoke-results-2026-04-24.md  smoke-test.sh
(+33 files in other folders)
